Bugfix 1) about > image on mobile 2) portfolio > image onClick 3) Landing bounce arrow down

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -476,6 +476,7 @@ h3 {
 
     a {
       color: $grey-dark;
+      cursor: pointer;
 
       &:hover{
         color: $primary-color;
@@ -739,6 +740,7 @@ label {
   }
 }
 
+
 // ____________________________________________
 //
 //      development (temp)
@@ -752,6 +754,7 @@ label {
   display: none;
 }
 
+
 // ____________________________________________
 //
 //      Media queries
@@ -762,6 +765,7 @@ label {
   .top-flex {
     .title-text-flex {
       display: block;
+      padding: 0 10px;
     }
     .img-mobile {
       display: inline-block;
@@ -852,4 +856,40 @@ label {
     font-size: 2rem;
   }
 
+}
+
+
+// ____________________________________________
+//
+//      Animations
+// ____________________________________________
+
+.bounce {
+ animation: bounce 4s infinite;
+ -webkit-animation: bounce 4s infinite;
+ -moz-animation: bounce 4s infinite;
+ -o-animation: bounce 4s infinite;
+}
+
+@-webkit-keyframes bounce {
+ 0%, 20%, 50%, 80%, 100% {-webkit-transform: translateY(0);}
+ 40% {-webkit-transform: translateY(-30px);}
+ 60% {-webkit-transform: translateY(-15px);}
+}
+
+@-moz-keyframes bounce {
+ 0%, 20%, 50%, 80%, 100% {-moz-transform: translateY(0);}
+ 40% {-moz-transform: translateY(-30px);}
+ 60% {-moz-transform: translateY(-15px);}
+}
+
+@-o-keyframes bounce {
+ 0%, 20%, 50%, 80%, 100% {-o-transform: translateY(0);}
+ 40% {-o-transform: translateY(-30px);}
+ 60% {-o-transform: translateY(-15px);}
+}
+@keyframes bounce {
+ 0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+ 40% {transform: translateY(-30px);}
+ 60% {transform: translateY(-15px);}
 }
